fix: overflow

--- a/profile/index.css
+++ b/profile/index.css
@@ -1,4 +1,4 @@
-.csq__profile--body {
+.lg2__profile--body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: auto;
